# Rasterizer

./: CMakeLists.txt
examples/: Head.cpp  color_triangle.cpp
lib/Drawing/: CMakeLists.txt  abstractDrawer.h  tgaDrawer.cpp  tgaDrawer.h
lib/TgaImage/: CMakeLists.txt  TgaImage.cpp  TgaImage.h
lib/objloader/: CMakeLists.txt  auxilary.cpp  auxilary.h  objloader.cpp  objloader.h  objloader_test.cpp
lib/vector/: vector.h
src/: abstractDrawer.h  geometry.cpp  geometry.h  main.cpp  tgaDrawer.cpp  tgaDrawer.h
